--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Projeto desenvolvido no Bootcamp Spring React - DevSuperior"
+      content="Project developed during DevSuperior's Spring React Bootcamp"
     />
     <title>DSCatalog</title>
   </head>
   <body>
-    <noscript>Você deve habilitar o JavaScript no seu navegador</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
